cmake_minimum_required(VERSION 3.9)
project(graphics)

set(CMAKE_CXX_STANDARD 11)

add_executable(graphics
        graphics/main.cpp
        graphics.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
        graphics.xcodeproj/project.xcworkspace/xcuserdata/amrmkayid.xcuserdatad/UserInterfaceState.xcuserstate
        graphics.xcodeproj/project.xcworkspace/contents.xcworkspacedata
        graphics.xcodeproj/xcuserdata/amrmkayid.xcuserdatad/xcschemes/xcschememanagement.plist
        graphics.xcodeproj/project.pbxproj
        labs/lab2-batman.png
        LICENSE
        README.md)
